Documentation and download available at https://www.FreeRTOS.org/

Changes between FreeRTOS V202011.00 and FreeRTOS V202012.00 released December 2020

    + Includes libraries that are part of the FreeRTOS 202012.00 LTS release.
        - Learn more at https:/freertos.org/lts-libraries.html
	+ Networking support for QEMU MPS2
	+ Demo Updates
		- AWS IoT Jobs Library
		- AWS Defender
		- HTTP Mutual Auth
		- HTTP Plaintext
		- UDP for FreeRTOS+TCP
		- S3 Upload & Download


Changes between FreeRTOS V10.4.1 and FreeRTOS V202011.00 released November 10 2020

	+ Added new coreJSON Library. See https://www.freertos.org/json/
	+ Added new coreMQTT Library. See https://www.freertos.org/mqtt/
	+ Added new corePKCS11 Library. See https://www.freertos.org/pkcs11/
	+ Added new AWS IoT Device Shadow Library. See
	  https://www.freertos.org/iot-device-shadow/
	+ Updated to FreeRTOS Kernel v10.4.2. See
	  https://github.com/FreeRTOS/FreeRTOS-Kernel/blob/master/History.txt
	+ Updated to FreeRTOS+TCP v2.3.1. See
	  https://github.com/FreeRTOS/FreeRTOS-Plus-TCP/blob/master/History.txt
	+ Update WolfSSL to 4.5.0 and add the WolfSSL FIPS ready demo.
	+ Convert most dependent libraries to Git submodules.
	+ Various general maintenance and improvements.


Changes between FreeRTOS V10.4.0 and FreeRTOS V10.4.1 released September 17 2020
	See https://www.FreeRTOS.org/FreeRTOS-V10.4.x.html

	+ Fixed an incorrectly named parameter that prevented the 
	  ulTaskNotifyTakeIndexed macro compiling, and the name space clash in the 
	  test code that prevented this error causing test failures.


Changes between FreeRTOS V10.3.1 and FreeRTOS V10.4.0 released September 10 2020

	See https://www.FreeRTOS.org/FreeRTOS-V10.4.x.html

	Major enhancements:

	+ Task notifications:  Prior to FreeRTOS V10.4.0 each created task had a
	  single direct to task notification.  From FreeRTOS V10.4.0 each task has
	  an array of notifications.  The direct to task notification API has been