@@ -38,6 +38,13 @@ dependencies:
       url: "https://github.com/FreeRTOS/coreMQTT.git"
       path: "FreeRTOS-Plus/Source/Application-Protocols/coreMQTT"
 
+  - name: "coreMQTT Agent"
+    version: "v1.0.0"
+    repository:
+      type: "git"
+      url: "https://github.com/FreeRTOS/coreMQTT-Agent.git"
+      path: "FreeRTOS-Plus/Source/Application-Protocols/coreMQTT-Agent"
+
   - name: "corePKCS11"
     version: "v3.0.0"
     repository:
